panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__preprocessor__test_error_too_few_arguments_to_macro_invocation.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/preprocessor/test_error_too_few_arguments_to_macro_invocation.c
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: argument count mismatch: too few arguments to function-like macro invocation (expected 1 but got 0)
   ╭─[panko/tests/cases/preprocessor/test_error_too_few_arguments_to_macro_invocation.c:9:5]
   │
 9 │     ONE_ARG();
   │     ───┬───  
   │        ╰───── this macro expects 1 argument
───╯

Error: argument count mismatch: too few arguments to function-like macro invocation (expected 2 but got 1)
    ╭─[panko/tests/cases/preprocessor/test_error_too_few_arguments_to_macro_invocation.c:10:5]
    │
 10 │     TWO_ARG(42);
    │     ───┬───  
    │        ╰───── this macro expects 2 arguments
────╯

Error: argument count mismatch: too few arguments to function-like macro invocation (expected 3 but got 2)
    ╭─[panko/tests/cases/preprocessor/test_error_too_few_arguments_to_macro_invocation.c:11:5]
    │
 11 │     THREE_ARG(42, 27);
    │     ────┬────  
    │         ╰────── this macro expects 3 arguments
────╯
